--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       crossorigin="anonymous"
     />
 
-    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="./main.css" />
     <title>Document</title>
   </head>
   <body>
